[project]
name = "travel_itinerary_generator"
version = "0.1.0"
description = ""
authors = [
    {name = "piyush",email = "piyush@orgzit.com"}
]
requires-python = ">=3.13 <4.0"
dependencies = [
    "agno (>=2.0.7,<3.0.0)",
    "ddgs (>=9.5.5,<10.0.0)",
    "groq (>=0.31.1,<0.32.0)",
    "streamlit (>=1.49.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
